# pga

./: Cargo.toml  README.md  build_web.sh  package.json
.github/workflows/: deploy.yml
examples/: visualization.rs
src/: incidence.rs  lib.rs  pga3d.rs  project_reject.rs  test.rs  visualization.rs  web.rs
src/pgai/: mod.rs  types.rs  wedge.rs
src/visualization/: mod.rs  scenes.rs
web/: README.md  index.html
