[package]
name = "pga"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
visualization = ["dep:bevy", "dep:smooth-bevy-cameras"]
web = ["visualization", "dep:wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]

[dependencies]
# Visualization dependencies (optional)
bevy = { version = "0.16.1", features = ["default"], default-features = false, optional = true }
smooth-bevy-cameras = { version = "0.14.0", optional = true }

# WASM dependencies  
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[[example]]
name = "visualization"
required-features = ["visualization"]
